lipwig working dir